--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> My Webpage </title>
+<title> Thy H. Nguyen's Webpage #1 </title>
 </head>
 <body>
-  Hello Word!
+  This is my Flower!
   </body>
   </html>
